[package]
name = "stoic"
version = "0.2.2"
edition = "2021"
authors = ["Wilfred Denton <wilfred@hey.com>"]
readme = "README.md"
repository = "https://github.com/wilfreddenton/stoic"
license = "MIT"
description = "a simple static blog generator"

[dependencies]
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
futures = "0.3"
handlebars = "4.3"
inquire = "0.6"
notify = "5.1"
notify-debouncer-mini = { version = "0.2", default-features = false }
pulldown-cmark = { version = "0.9", default-features = false }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
toml_datetime = "0.6"
walkdir = "2"
