[package]
name = "stoic"
version = "0.4.1"
edition = "2021"
authors = ["Wilfred Denton <wilfred@hey.com>"]
readme = "README.md"
repository = "https://github.com/wilfreddenton/stoic"
license = "MIT"
description = "a simple static blog generator"

[dependencies]
axum = "0.6"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
color-eyre = { version = "0.5", default-features = false }
futures = "0.3"
handlebars = "4.3"
Inflector = "0.11"
inquire = "0.6"
notify = "5.1"
notify-debouncer-mini = { version = "0.2", default-features = false }
pulldown-cmark = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
superconsole = "0.1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
toml_datetime = "0.6"
tower-livereload = "0.7"
tower-http = { version = "0.4", features = ["fs"] }
walkdir = "2"
anyhow = "1.0.70"
