[package]
name = "stoic"
version = "0.5.2"
edition = "2021"
authors = ["Wilfred Denton <wilfred@hey.com>"]
readme = "README.md"
repository = "https://github.com/wilfreddenton/stoic"
license = "MIT"
description = "a simple static blog generator"

[dependencies]
axum = "0.8"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
futures = "0.3"
handlebars = "6.3"
inquire = "0.9"
notify = "8.2"
notify-debouncer-mini = { version = "0.7", default-features = false }
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
superconsole = "0.2.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
toml_datetime = "0.7"
tower-livereload = "0.10"
tower-http = { version = "0.6", features = ["fs"] }
walkdir = "2"
anyhow = "1"
heck = "0.5.0"
